# ledgerko

./: .env.sample  .gitignore  .prettierrc  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  bash_history  bashrc.override.sh  devcontainer.json  docker-compose.yml  env.sample  start
app/accounts/: admin.py  models.py
app/accounts/migrations/: 0001_initial.py  0002_alter_account_unique_together_and_more.py
app/core/: urls.py
app/core/settings/: base.py  local.py  prod.py
app/definitions/: admin.py  models.py
app/definitions/migrations/: 0001_initial.py  0002_alter_exchangerate_unique_together_and_more.py  0002_seed_currencies.py
app/formats/en_US/: formats.py
app/ledgers/: admin.py  enums.py  models.py
app/ledgers/migrations/: 0001_initial.py
app/static/css/: ledgerko-ui.css  tw-input.css
app/templates/: base.html
app/templates/pages/: index.html
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
app/utils/management/commands/: create_superuser.py
docker/local/django/: Dockerfile  start
docker/postgres/: Dockerfile
docker/prod/django/: Dockerfile  start
docker/prod/nginx/: default.conf
docker/prod/traefik/: Dockerfile  traefik.yml
notebooks/: init_django.py  test_nb.ipynb
requirements/: base.txt  local.txt  prod.txt
