[project]
name = "ledgerko"
version = "0.1.0"
description = "Kwarta Chronicles is your modern *alkansya* for tracking expenses and investments."
readme = "README.md"

license = { text = "GNU GENERAL PUBLIC LICENSE" }
authors = [
  { name = "Ivan Ian Orara", email = "ivanorara@gmail.com" },
]
requires-python = "==3.13.*"
dependencies = [
    "django==5.2.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "psycopg[c]==3.2.10",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "factory-boy==3.3.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-sugar==1.1.1",
    "ruff==0.13.1",
    "werkzeug[watchdog]==3.1.3",
]